# advent-of-code

./: .gitignore  meson.build
inc/: meson.build
src/: main.cpp  main.hpp  meson.build
src/2022/: day1.cpp  day2.cpp  meson.build
subprojects/: lak.wrap
